// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavLink /> matches snapshot 1`] = `
<a
  className="active"
  href="/"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`<NavLink /> matches snapshot with children 1`] = `
<a
  className="active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  <h1>
    Some Text
  </h1>
</a>
`;
